<resources>
    <string name="prime">Prime Time Realtors</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont">Don\'t Have an Account? Register</string>
    <string name="create">Create New Account</string>
    <string name="full">Full Name</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already">Already Registered? Login</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_categories2">CategoriesActivity2</string>
    <string name="tab_text_1">For Sale</string>
    <string name="tab_text_2">Rentals</string>
</resources>